# area_viz

./: .env_example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
large_data/PLZ_Gebiete/: OSM_Gebiete.dbf  OSM_Gebiete.shx  OSM_PLZ.shp.xml  OSM_PLZ.shx  OSM_PLZ_2digits.dbf  OSM_PLZ_2digits.shx  OSM_PLZ_3digits.dbf  OSM_PLZ_3digits.shx  PLZ_Coords.json
src/area_viz/: __init__.py
src/area_viz/area_maps/: __init__.py  area_shape.py  cities.py  plz2_shape.py  plz3_shape.py  plz_coords.py
src/area_viz/corporate_design/: __init__.py
src/area_viz/data/: generate_test_data.py
src/area_viz/data/PLZ_Gebiete/: OSM_Gebiete.dbf  OSM_PLZ.dbf  OSM_PLZ_2digits.dbf  OSM_PLZ_3digits.dbf
src/area_viz/data/city_data/: Hauptstädte der deutschen Bundesländer (PLZ, Hauptstadt).csv
src/area_viz/datamodel/: poi.py
src/area_viz/import_data/: __init__.py  company_list.py
src/area_viz/plot_data/: generic.py  heatmap.py  revenue.py  sales_areas.py
src/area_viz/test_data/: generate.py
