[project]
name = "area-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gerrit Kocherscheidt", email = "kochersg@koco-group.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
area-viz = "area_viz:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
