[project]
name = "area-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gerrit Kocherscheidt", email = "kochersg@koco-group.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
]

[project.scripts]
area-viz = "area_viz:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
